homepage package.json && npm audit fix

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "2022",
   "version": "0.1.0",
-  "homepage": ".",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -13,8 +12,10 @@
     "react-dom": "^18.2.0",
     "react-https-redirect": "^1.1.0",
     "react-router-dom": "^6.4.0",
-    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
